[package]
name = "flowrs"
version = "0.2.0"
edition = "2021"
authors = ["wuermseer.florian@gmail.com", "markus.friedrich@hm.edu"]
description = "A generic and Type-Safe WASM library for Flow-Based Programming."
repository = "https://github.com/flow-rs/flowrs"
license = "Apache-2.0"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/flowrs"
keywords = ["flow", "fbp", "wasm"]
categories = ["data-structures", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flowrs-derive = { version = "0.3.0", path = "flowrs_derive" }
serde = { version = "1.0.184", features = ["derive", "rc"] }
serde_json = "1.0.100"
thiserror = "1.0.44"
anyhow = "1.0"
crossbeam-channel = "0.5.8"
web-time = "0.2.0"
cfg-if = "1.0.0"

reqwest = { version = "0.11.22", features = ["blocking", "json"], optional = true }
futures-core = { version = "0.3.29", optional = true }

opentelemetry = { version = "0.21", optional = true }
opentelemetry_sdk = { version = "0.21", optional = true }
opentelemetry-stdout = { version = "0.2.0", features = ["trace"], optional = true }
tracing-opentelemetry = { version = "0.22", optional = true }
tracing-subscriber = { version = "0.3.18", features = [], optional = true }

tracing = { version = "0.1.40" }
metrics = { version = "0.21.1" }
metrics-exporter-prometheus = { version = "0.12.1", default-features = false, features = ["push-gateway"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[features]
default = ["tracing", "metrics"]
tracing = ["dep:reqwest", "dep:futures-core", "dep:tracing-subscriber", "dep:tracing-opentelemetry", "dep:opentelemetry-stdout", "dep:opentelemetry", "dep:opentelemetry_sdk"]
metrics = ["dep:metrics-exporter-prometheus"]
